--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -5,17 +5,52 @@
   text-align: center;
 }
 
+input[type="text"] {
+  padding: 0.5em;
+  /* margin: 0.5em 0; */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+label {
+  text-align: left;
+  padding: 0.5em 0;
+
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+}
+
+.button-container {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: 2rem;
+}
+
+.btn-submit {
+  background-color: #000000;
+  cursor: pointer;
+}
+
+.btn-submit:hover {
+  background-color: #646cff;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 6rem;
+  padding: 1.5rem;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2rem #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2rem #61dafbaa);
 }
 
 @keyframes logo-spin {
@@ -34,9 +69,43 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 2rem;
 }
 
-.read-the-docs {
-  color: #888;
+.data-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+.modal-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+/* blur background content */
+  backdrop-filter: blur(10px);
+}
+
+.modal-container {
+  display: flex;
+  width: 24rem;
+  min-width: 16rem;
+  margin: 0 100px;
+  padding: 26px 50px 50px 50px;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.modal-container .modal-title {
+  font-size: 1.5rem;
+  color: white;
+  position: relative;
+  top: 0;
+  left: 0;
 }
