--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #343434;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -39,6 +39,9 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 10px 0 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
